verify merge